2011-10-05  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=68731
        
        Outline sides not painted for region. Fix the painting and hit testing code for regions to add in
        the maximalOutlineSize on unclipped sides. Also fix some math errors with the computation of the
        translation offset and clip rects when overflow or outlines spill out.

        Reviewed by Darin Adler.

        * fast/regions/outline-sides-in-region.html: Added.
        * platform/mac/fast/regions/outline-sides-in-region-expected.png: Added.
        * platform/mac/fast/regions/outline-sides-in-region-expected.txt: Added.

2011-10-05  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] Unreviewed gardening.

        * platform/qt-wk2/Skipped: Unskip sputnik tests, because they pass with newer Qt5.

2011-10-05  Dirk Schulze  <krit@webkit.org>

        SVG 1.1: ineffectual transform attribute for ClipPath
        https://bugs.webkit.org/show_bug.cgi?id=55361

        Reviewed by Nikolas Zimmermann.
        
        Test that the clip path gets concatenated with the current animated transformation and
        that hit testing is affected correctly.

        * platform/mac/svg/clip-path/clip-path-transform-1-expected.png: Added.
        * platform/mac/svg/clip-path/clip-path-transform-1-expected.txt: Added.
        * platform/mac/svg/clip-path/clip-path-transform-2-expected.png: Added.
        * platform/mac/svg/clip-path/clip-path-transform-2-expected.txt: Added.
        * svg/clip-path/clip-path-transform-1.svg: Added. Test clipping to path with transform.
        * svg/clip-path/clip-path-transform-2.svg: Added. Test masking with transform.
        * svg/dynamic-updates/SVGClipPathElement-transform-influences-hitTesting-expected.png: Added.
        * svg/dynamic-updates/SVGClipPathElement-transform-influences-hitTesting-expected.txt: Added.
        * svg/dynamic-updates/SVGClipPathElement-transform-influences-hitTesting.html: Added.