@@ -14,14 +14,15 @@ function test()
 
     function contentEvent()
     {
-        InspectorTest.printTimelineRecords("MarkLoad");
         InspectorTest.stopTimeline(finish);
     }
 
     function finish()
     {
-        if (++finishCalled === 2)
+        if (++finishCalled === 2) {
+            InspectorTest.printTimelineRecords("MarkLoad");
             InspectorTest.completeTest();
+        }
     }
 }
 
