@@ -1,3 +1,11 @@
+2011-10-05  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Unreviewed. Reduce test flakyness.
+        There was a race between Inspector's internal page reloaded message and load event.
+
+        * inspector/timeline/timeline-load-event-expected.txt:
+        * inspector/timeline/timeline-load-event.html:
+
 2011-10-05  David Hyatt  <hyatt@apple.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=68731
